--- a/front-end/public/nieuweRonde.html
+++ b/front-end/public/nieuweRonde.html
@@ -8,7 +8,7 @@
 <aside>
     <ul>
         <li>
-            <a href="/index.html">
+            <a href="/creeerToernooi.html">
                 <button>Cre&euml;er toernooi</button>
             </a>
         </li>
