--- a/front-end/public/schaakclubToevoegen.html
+++ b/front-end/public/schaakclubToevoegen.html
@@ -18,10 +18,10 @@
             <div class="col-3 menu">
                 <ul class="list-group list-dark">
                     <li class="list-group-item list-group-item-dark">
-                        Schaaktoernooi applicatie
+                        <a class= "homepagelink" href="index.html">Schaaktoernooi applicatie</a>
                     </li>
                     <li class="list-group-item list-group-item-light">
-                        <a class="btn btn-dark btn-menu" href="index.html" role="button">Cre&euml;er toernooi</a>
+                        <a class="btn btn-dark btn-menu" href="creeerToernooi.html" role="button">Cre&euml;er toernooi</a>
                     </li>
                     <li class="list-group-item list-group-item-light">
                         <select name="asideToernooi" class="custom-select" id="asideToernooi">
